# docs/swagger.yaml
@@ -173,7 +173,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.Article'
+            $ref: '#/definitions/model.ArticleSwagger'
         "400":
           description: 请求错误
           schema:
@@ -220,7 +220,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.Article'
+            $ref: '#/definitions/model.ArticleSwagger'
         "400":
           description: 请求错误
           schema:
@@ -269,7 +269,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.Article'
+            $ref: '#/definitions/model.ArticleSwagger'
         "400":
           description: 请求错误
           schema:
@@ -351,7 +351,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.Tag'
+            $ref: '#/definitions/model.TagSwagger'
         "400":
           description: 请求错误
           schema:
@@ -398,7 +398,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.Tag'
+            $ref: '#/definitions/model.TagSwagger'
         "400":
           description: 请求错误
           schema:
@@ -446,7 +446,7 @@ paths:
           description: 成功
           schema:
             items:
-              $ref: '#/definitions/model.Tag'
+              $ref: '#/definitions/model.TagSwagger'
             type: array
         "400":
           description: 请求错误
